# hierarchical-bayesian-inference-sandbox

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
analysis/: first_hierarchical_bayesian_inference.py  generate_visual_report.py  hierarchical_ou_dataset_modeling.md
analysis/output/: synthetic_report.md
docs/: model_descriptions.md
notebooks/: explore_synthetic_data.ipynb  explore_synthetic_data_2level.ipynb  model.dot  pymc_model_graph  tutorial.ipynb  visualise_synthetic_data.ipynb
src/bayes_tools/helpers/: __init__.py  data_fetchers.py  hierarchical_lgssm.py  models.py  pymc_visualisation_helpers.py  ssm_helpers.py  synthetic_data_helpers.py  visualisation_helpers.py
src/tests/: conftest.py  test_hierarchical_lgssm.py  test_pymc_visualisation_helpers.py  test_structural_model.py  test_synthetic_data_helpers.py  test_visualisation_helpers.py
tests/: test_synthetic_data_helpers.py
