[project]
name = "bayes-tools"
version = "0.1.0"
description = "Sandbox for practicing hierarchical Bayesian inference and statistical reporting"
authors = [{ name = "Samual MacDonald" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"


dependencies = [
    "numpy",
    "pandas",
    "polars",
    "matplotlib",
    "arviz",
    "pymc>=5.13",
    "bambi",
    "scipy",
    "seaborn",
    "tqdm",
    "jupyter",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
# Python version used for parsing, and the line length Ruff should enforce
target-version = "py313"
line-length = 88

# [tool.ruff.lint]

[tool.hatch.build.targets.wheel]
packages = ["src/bayes_tools"]

[tool.hatch.build.targets.sdist]
include = ["src/bayes_tools", "README.md", "LICENSE"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
